--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
                 <h1 class="site-title">🪷 शब्दसुमन</h1>
                 <p class="site-tagline">हिंदी काव्य एवं साहित्य मंच</p>
             </div>
-            
+            <!-- Welcome Banner moved here for mobile/desktop -->
+            <div class="welcome-banner" style="margin-bottom: 1.5rem;">
+                <h2>स्वागत है</h2>
+                <p>यह मंच हिंदी काव्य और साहित्य के प्रेमियों के लिए समर्पित है। यहाँ आप विभिन्न प्रकार की कविताओं का आनंद ले सकते हैं।</p>
+            </div>
             <!-- Navigation Controls -->
             <div class="nav-controls">
                 <button class="nav-control-btn" onclick="goBack()" title="पीछे जाएं">
@@ -60,10 +64,6 @@
 
             <!-- Home Section -->
             <section id="home" class="content-section active">
-                <div class="welcome-banner">
-                    <h2>स्वागत है</h2>
-                    <p>यह मंच हिंदी काव्य और साहित्य के प्रेमियों के लिए समर्पित है। यहाँ आप विभिन्न प्रकार की कविताओं का आनंद ले सकते हैं।</p>
-                </div>
                 <div id="allPoemsContainer" class="poems-grid"></div>
             </section>
 
